# thingy91_simple

./: .gitignore  CMakeLists.txt  Kconfig  README.rst  prj.conf
src/: main.c  ui_buzzer_control.c  ui_buzzer_control.h  ui_rgb_control.c  ui_rgb_control.h  user_shell_cmd.c  user_shell_cmd.h  user_ui_effect.c  user_ui_effect.h
src/ui/: Kconfig
